--- a/styles/style.css
+++ b/styles/style.css
@@ -210,6 +210,7 @@ right:17vw;
 
 .hoverCollection:hover .component2MenuStyle{
     display:block;
+    z-index: 1;
 }
 
 .component2MenuStyle li a{
@@ -244,6 +245,104 @@ right:17vw;
     line-height: 1.7;
     margin-bottom:15px;
 }
+
+/*SECTION SLIDER*/
+#slider-components{
+    position:relative;
+    width:100%;
+    
+    }
+    .all-absolute img{
+    position:absolute;
+    z-index:1;
+    }
+    .arrows-slider img{
+    width:3%;
+    }
+    #arrow-left img{
+    top:50%;
+    left:0;
+    }
+    #arrow-left{
+    width:100%
+    }
+    #arrow-right{
+    width:100%
+    }
+    #arrow-right img{
+    top:50%;
+    left:97%;
+    }
+    #slider-ofert{
+    /*width:20%;*/
+    text-align:center;
+    position:absolute;
+    left:10%;
+    top:20%;
+    /*margin-left:auto;
+    margin-right:auto;*/
+    }
+    #icon-ofert img{
+    width:5vw;
+    margin-left:auto;
+    margin-right:auto;
+    }
+    #icon-ofert{
+    /*margin-left:auto;
+    margin-right:auto;*/
+    }
+    #text1{
+    font-family:"Chewy";
+    color:white;
+    font-size:2vw;
+    letter-spacing:5px;
+    line-height:1.1;
+    }
+    #text2{
+    font-size:1.7vw;
+    font-family:"Nunito";
+    font-weight: 600;
+    letter-spacing: .1em;
+    }
+    #text3{
+    font-family:"Chewy";
+    font-size:2vw;
+    color:#a55e03;
+    }
+    #buttomx{
+    font-family:"Nunito";
+    background-color:#a55e03;
+    /*width:60%;*/
+    color:white;
+    font-size:15px;
+    margin-left:auto;
+    margin-right:auto;
+    padding:10px;
+    border-radius:30px;
+    }
+    /*#margin-bottom-img{
+    position:absolute;
+    top:96.5%;
+    background-image:url("/home/estebangv/Documentos/Html/iceCream/IceCream/assets/footer-slider.png");
+    width:100%;
+    height:3.5%;
+    z-index:2;
+    
+    }*/
+    #slider-img img{
+    width:100%;
+    height:60vh;
+    }
+    a{
+    text-decoration:none;
+    }
+    
+    #slider-ofert-container{
+    height:100%;
+    width:100%;
+    position:absolute;
+    }
+/*FIN SECTION SLIDER*/
 
 
 /* Section Trending Products */
@@ -471,6 +570,39 @@ right:17vw;
 
 
 /* Media Queries */
+
+@media (max-width:756px) {
+      #slider-ofert{
+      /*background-color:yellow;*/
+      
+      bottom:auto;
+      left:0;
+      width:100%;
+      height:100%;
+      margin-top:auto;
+      margin-bottom:auto;
+      }
+      #slider-ofert-container{
+      background-color:orange;
+      opacity:0.7;
+      }
+      .all-absolute img{
+      z-index:1;
+      }
+      #buttomx{
+      width:30%;
+      font-size:2vmax;
+      }
+      #text1, #text2, #text3{
+      font-size:4vmax;
+      }
+      #icon-ofert img{
+      width:6vmax;
+      margin-left:auto;
+      margin-right:auto;
+    }
+    }
+
 @media screen and (max-width: 320px) {
     .footer-nav ul li a {
         padding-right: 0px;
