--- a/styles/style.css
+++ b/styles/style.css
@@ -106,6 +106,7 @@ ul{
     display:none;
 }
 
+
 #car-user-favor ul li img{
     height:20px;
     margin-right:10px;
@@ -153,6 +154,13 @@ option{
     list-style-type: none;
     margin-right:auto;
     margin-left:auto;
+}
+
+.close-x{
+display:none;
+text-align:right;
+padding:10px;
+color:black;
 }
 .style-arrows{
     vertical-align:middle;
@@ -745,28 +753,60 @@ background-color:#ffdea6;
 @media(max-width:756px){
     #header-component2{
         display:none;
-        visibility:hidden;
         position:absolute;
         top:0;
         left:0;
+        z-index:2;
         width:50%;
     }
 
     #component2{
-        display:flex;
-        width:100%;
-        height:100vh;
-        flex-direction:column;
-        background-color:#ffdea6;
-        align-items:center;
+    display:block;
+    overflow-y:scroll;
+    height:100vh;
     }
 
     #component2 ul li{
     display:block;
     }
+    
+    .close-x{
+     display:block;
+     }
 
     .icon-list{
     display:inline-block;
+    }
+    
+    #component2 ul .icon-nav {
+    display:block;
+    width:100%;
+    text-align:center;
+    margin:0;
+    }
+    
+    .columnBlock{
+    width:100%;
+    margin:2vw 0 2vw 0;
+    }
+    .columnBlock li{
+    text-align:center;
+    }
+    .menuNav{
+    width:100%;
+    }
+    .component2MenuStyle{
+    width:100%;
+    position:relative;
+    left:0;
+    right:0;
+    }
+    #menuCollection,#menuShop,#menuNatural,#menuRegular,#menuExotic{
+    left:0;
+    right:0;
+    }
+    .imgSubMenu{
+    max-width:100%;
     }
 }
 
